# document-translate

translategemma/: README.md  pyproject.toml  translate_markdown.py  translate_markdown_12b_multi_table_mode.py  translate_markdown_pipeline.py  translate_with_image.py
translategemma/4b/: docker-compose-4b.yml  pyproject-4b.toml  translate_markdown_4b.py
translategemma/data/: glossary.csv
translategemma/docker/: Dockerfile  chat_template.jinja  docker-compose-12b.yml
translategemma/prompt_templates/: translate_gemma.txt  translate_gemma_12b.txt  translate_gemma_4b.txt
